<resources>
    <string name="app_name">Flight Puntos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">sign in</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_credit_card">Credit Card</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>


    <string name="prompt_flyingfrom">Flying from</string>
    <string name="prompt_flyingto">Flying to</string>
    <string name="prompt_departure_date">Departure date</string>
    <string name="prompt_return_date">Return date</string>
    <string name="prompt_traveller">Select Traveller</string>
    <string name="prompt_class">Select class</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="alert_dialog_two_buttons_title">My Title</string>

    <string name="succesful_register">Your profile was created succesfully!</string>


    <string name="database_unavailable">Database unavailable</string>
    <string name="account_exist">An account with this email already exists. Please try again.</string>
    <string name="ok_button">OK</string>
    <string name="enter_first_name">Please enter your first name</string>
    <string name="enter_valid_first_name">Please enter a valid first name</string>
    <string name="enter_last_name">Please enter your last name</string>
    <string name="enter_valid_last_name">Please enter a valid last name</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_phone">Please enter your phone</string>
    <string name="enter_valid_phone">Please enter a valid phone</string>
    <string name="enter_credit_card">Please enter your credit card number</string>
    <string name="enter_valid_credit_card">Please enter a valid credit card number</string>
    <string name="enter_password">Please enter your password</string>
    <string name="enter_valid_pasword">Your password must have at least 6 characters.</string>
    <string name="confirm_password">Please confirm password</string>
    <string name="password_not_match">The password doesn\'t match.</string>
    <string name="error_closing_db">Error closing database or cursor</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="account_register_label">Don\'t have an account? Register</string>
    <string name="login_label">Login</string>
    <string name="already_account_label">Already have an account? Login</string>
    <string name="register_label">Register</string>
    <string name="text_welcome">Welcome to Flight Puntos, the app that allow you to make your own flight reservation</string>
    <string name="version_label">Version</string>
    <string name="save_label">Save</string>

    <string name="client_name_label">Client Name:</string>
    <string name="payment_label">Payment:</string>
    <string name="booking_date_label">Booking date:</string>
    <string name="flight_no_label">Flight No:</string>
    <string name="origin_label">Origin:</string>
    <string name="destination_label">Destination:</string>
    <string name="departure_date_label">Departure Date:</string>
    <string name="arrival_date_label">Arrival Date:</string>
    <string name="departure_time_label">Departure time:</string>
    <string name="arrival_time_label">Arrival time:</string>
    <string name="flight_duration_label">Flight duration:</string>
    <string name="flight_class_label">Flight class:</string>
    <string name="number_of_traveller_label"># of traveller:</string>
    <string name="fare_label">Fare:</string>
    <string name="total_fare_label">Total fare:</string>
    <string name="cancel_flight_label">Cancel flight</string>
    <string name="no_booked_flights">You have no booked flights at this time.</string>
    <string name="sort_label">Sort</string>
    <string name="flight_is_not_available">The specified flight is not available at this time. Please try again later.</string>
    <string name="round_flight_is_not_available">The specified round flight is not available at this time. Please try again with a different combination.</string>
    <string name="account_information_label">Account Information</string>
    <string name="firstname_profile_label">FirstName: </string>
    <string name="last_name_profile_label">Last name: </string>
    <string name="email_profile_label">Email: </string>
    <string name="phone_profile_label">Phone: </string>
    <string name="change_password_label">Change Password</string>
    <string name="old_password_label">Old Password</string>
    <string name="new_password_label">New Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="one_traveller_label">1 Traveller</string>
    <string name="economy_label">Economy</string>
    <string name="business_label">Business</string>
    <string name="search_label">Search</string>
    <string name="traveller_label">traveller</string>
    <string name="book_flight_label">Book flight</string>
    <string name="outbound_are_label">Outbound are:</string>
    <string name="return_fare_label">Return fare:</string>


    <string name="book_successfully_label">Your flight booked successfully.</string>
    <string name="ok_button_label">Ok</string>
    <string name="already_booked_flight">You already booked this flight. </string>
    <string name="already_round_flight">You already booked either the outbound or the return flight. Please select another flight and try again.</string>
    <string name="profile_updated_successfull">The profile updated successfully! </string>
    <string name="yes_label">Yes</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="cancel_flight_question">Are you sure you want to cancel your flight? </string>
    <string name="one_way_tab_label">One Way</string>
    <string name="round_trip_tab_label">Round Trip</string>
    <string name="itinerary_title">Itinerary</string>
    <string name="account_title">Account</string>
    <string name="profile_title">Profile</string>
    <string name="security_settings_title">Security Settings</string>
    <string name="about_title">About</string>
    <string name="logout_title">Logout</string>
    <string name="select_class_label">Select Class</string>
    <string name="number_of_travellers_label">Number of travellers</string>
    <string name="select_valid_return_date">Please select a valid return date. The return date cannot be before the departure date.</string>
    <string name="select_departure_date">Please select a departure date.</string>
    <string name="select_return_date">"Please select a return date."</string>
    <string name="enter_origin">Please enter the origin</string>
    <string name="enter_valid_origin">Please enter a valid origin</string>
    <string name="enter_destination">Please enter the destination</string>
    <string name="enter_valid_destination">Please enter a valid destination</string>
    <string name="select_one_way_flight">Select one way flight</string>
    <string name="sort_by_label">Sort by</string>
    <string name="select_outbound_flight">Select outbound flight</string>
    <string name="round_flight_not_available">The specified round flight is not available. Please try again later.</string>
    <string name="profile_first_name_label">First Name: </string>
    <string name="profile_last_name_label">Last Name: </string>
    <string name="profile_phone_label">Phone: </string>
    <string name="profile_email_label">Email: </string>
    <string name="select_return_flight">Select return flight</string>
    <string name="return_flight_not_available">The specified return flight is not available. Please try again later.</string>
    <string name="password_change_successfully">The password changed successfully! </string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="enter_new_password">Please enter your new password</string>
    <string name="confirm_new_password">Please confirm your new password</string>
    <string name="traveller_count_label">Traveller</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="flight_detail_title">Flight Detail</string>
    <string name="flight_list_title">Flight list</string>
    <string name="checkout_title">Checkout</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="failed_login">Failed Login!</string>

    <string-array name="sort">
        <item>Fare</item>
        <item>Travel time</item>
    </string-array>

</resources>
