<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_itinerary"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/itinerary_title" />

    </group>

    <item android:title="@string/account_title">

        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_account_box_black_24dp"
                android:title="@string/profile_title" />
            <item
                android:id="@+id/nav_security"
                android:icon="@drawable/ic_security_black_24dp"
                android:title="@string/security_settings_title" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about_title" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_assignment_return_black_24dp"
                android:title="@string/logout_title" />

        </menu>


    </item>

</menu>
